--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ tensorflow-macos = "^2.15.0"
 tensorflow-metal = "^1.1.0"
 scikit-learn = "^1.4.0"
 pyarrow = "^15.0.0"
+xgboost = "^2.0.3"
+kaggle = "^1.6.6"
 
 
 [build-system]
