--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ scikit-learn = "^1.4.0"
 pyarrow = "^15.0.0"
 xgboost = "^2.0.3"
 kaggle = "^1.6.6"
+google-cloud-storage = "^2.16.0"
+google-cloud-api-keys = "^0.5.9"
 
 
 [build-system]
