--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ xgboost = "^2.0.3"
 kaggle = "^1.6.6"
 google-cloud-storage = "^2.16.0"
 google-cloud-api-keys = "^0.5.9"
+google-api-python-client = "^2.124.0"
 
 
 [build-system]
