--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ kaggle = "^1.6.6"
 google-cloud-storage = "^2.16.0"
 google-cloud-api-keys = "^0.5.9"
 google-api-python-client = "^2.124.0"
+oauth2client = "^4.1.3"
 
 
 [build-system]
